[package]
name = "shorty"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }

actix-web = "4.0.0-beta.21"

base64 = "0.13.0"
rand = "0.8.5"

tracing = "0.1.30"
tracing-subscriber = { version = "0.3.6", features = [ "env-filter" ] }
tracing-core = "0.1.21"

serde = "1.0.136"
toml = "0.5.8"

chrono = "0.4.19"

thiserror = "1.0.30"
anyhow = "1.0.56"

[dependencies.sqlx]
version = "0.5.10"
features = ["runtime-tokio-rustls", "chrono", "migrate", "offline", "macros", "sqlite"]

[profile.production]
inherits = "release"
lto = "fat"
