[package]
name = "shorty"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }

actix-web = "4.0.1"
actix-files = "0.6.0"

base64 = "0.13.0"
rand = "0.8.5"

tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "env-filter" ] }
tracing-core = "0.1.26"

serde = "1.0.137"
toml = "0.5.9"

chrono = "0.4.19"

thiserror = "1.0.31"
anyhow = "1.0.57"

lazy_static = "1.4.0"

[dependencies.sqlx]
version = "0.5.13"
features = ["runtime-tokio-rustls", "chrono", "migrate", "offline", "macros", "sqlite"]

[profile.production]
inherits = "release"
lto = "fat"
