[package]
name = "shorty"
version = "0.8.1"
edition = "2021"
rust-version =  "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }

actix-web = "4.3.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"

base64 = "0.21.2"
rand = "0.8.5"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
tracing-core = "0.1.31"

serde = "1.0.164"
serde_json = "1.0.96"
toml = "0.7.4"

chrono = "0.4.26"

thiserror = "1.0.38"

lazy_static = "1.4.0"
dotenvy = "0.15.7"

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-tokio-rustls", "chrono", "migrate", "offline", "macros", "sqlite"]

[profile.production]
inherits = "release"
lto = "fat"
strip = true
