[package]
name = "shorty"
version = "0.8.1"
edition = "2021"
rust-version =  "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }

actix-web = "4.3.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"

base64 = "0.21.0"
rand = "0.8.5"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
tracing-core = "0.1.30"

serde = "1.0.152"
serde_json = "1.0.93"
toml = "0.7.2"

chrono = "0.4.23"

thiserror = "1.0.38"

lazy_static = "1.4.0"
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.6.2"
features = ["runtime-tokio-rustls", "chrono", "migrate", "offline", "macros", "sqlite"]

[profile.production]
inherits = "release"
lto = "fat"
strip = true
