[package]
name = "shorty"
version = "0.8.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }

actix-web = "4.4.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"

base64 = "0.21.4"
rand = "0.8.5"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
tracing-core = "0.1.31"

serde = "1.0.189"
serde_json = "1.0.107"
toml = "0.8.2"

chrono = "0.4.31"

thiserror = "1.0.49"

lazy_static = "1.4.0"

dotenvy = "0.15.7"
konst = "0.3.5"

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-tokio-rustls", "chrono", "migrate", "offline", "macros", "sqlite"]

[dependencies.static-files]
version = "0.2"
optional = true

[build-dependencies.static-files]
version = "0.2"
#optional = true

[build-dependencies]
serde = "^1.0"
toml = { version = "0.7.6", features = ["indexmap"]}

[features]
default = ["integrated-frontend"]
integrated-frontend = ["static-files"]
